# chatBotTest

./: .env.example  .gitignore  AGENTS.md  FREE_FORM_INPUT_GUIDE.md  README.md  bot.py  pyproject.toml
docs/: CHATBOT_OPERATION_POLICY_V2.md  EVIDENCE_SUBMISSION_BASELINE.md  FEATURE_SCOPE_BASELINE.md  FIELD_BINDING_IMPLEMENTATION_BASELINE.md  GEMINI_RECOVERY_SETUP.md  MODEL_RECOVERY_SETUP.md  README.md  REFERENCE_ALIGNMENT_REVIEW.md  REMINDER_INPUT_RESOLUTION_BASELINE.md  RULE_FIRST_LLM_HANDOFF.md  SEASON_ACTIVITY_SUBSET_BASELINE.md  SQLITE_BACKUP_AND_RECOVERY_RUNBOOK.md  SQLITE_IMPLEMENTATION_RUNBOOK.md  SQLITE_RUNTIME_SETUP.md  SQLITE_SCHEMA_PLAN.md  STAGE2_RULE_ENGINE.md  STRUCTURED_INTERACTION_POLICY.md  SUPPORT_HANDOFF_CHATBOT_RELAY.md  TARGET_RUNTIME_INTEGRATION_GUIDE.md
src/PROJECT/: __init__.py  main.py  settings.py  support_handoff.py
src/PROJECT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/contract/: test_rule_engine_cross_domain_fixtures.py
tests/unit/: test_admin_api.py  test_admin_api_server.py  test_admin_audit_repository.py  test_admin_delivery.py  test_admin_runtime.py  test_admin_telemetry.py  test_ai_policy.py  test_auth_service.py  test_command_router.py  test_evidence_submission_flow.py  test_evidence_submission_service.py  test_farmer_onboarding_flow.py  test_fertilizer_service.py  test_field_binding_service.py  test_field_lookup_service.py  test_field_registry_repository.py  test_gemini_edit_intent.py  test_gemini_recovery.py  test_i18n_translator.py  test_input_fallback.py  test_input_resolution_flow.py  test_invitation_repository.py  (+42 more)
(+132 files in other folders)
